src/objects/Band__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <picklist>
            <picklistValues>
                <fullName>Rock and Roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bossanova</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rap</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Headliner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Headliner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Phone_Number__c</fullName>
        <label>Manager Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Needs_Piano__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Piano</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_Time__c</fullName>
        <label>Set Time</label>
        <picklist>
            <picklistValues>
                <fullName>20 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <defaultValue>&apos;@&apos;</defaultValue>
        <label>Twitter Handle</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Band</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome de Band</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>